<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateHabitFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/create_habit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="10dp"
        android:hint="@string/habit_title"
        android:background="@drawable/background_field_input_text"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/create_habit_count"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="10dp"
        android:hint="@string/habit_count"
        android:background="@drawable/background_field_input_text"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/create_habit_title"/>

    <EditText
        android:id="@+id/create_habit_frequency"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="10dp"
        android:hint="@string/habit_frequency"
        android:background="@drawable/background_field_input_text"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/create_habit_count"/>

    <RadioGroup
        android:id="@+id/create_type_habit"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_habit_frequency">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_type_good"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_type_bad"/>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/create_priority_habit"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/habit_priority"
        app:layout_constraintTop_toBottomOf="@id/create_type_habit"/>

    <EditText
        android:id="@+id/create_description_habit"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="10dp"
        android:hint="@string/habit_description"
        android:gravity="center_horizontal"
        android:background="@drawable/background_field_input_text"
        app:layout_constraintTop_toBottomOf="@id/create_priority_habit"
        app:layout_constraintBottom_toTopOf="@id/btn_create_habit"/>

    <Button
        android:id="@+id/btn_create_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/btn_create_habit"
        android:background="@drawable/background_field_input_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>